--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -147,6 +147,22 @@ env:
       # Run the setup script
       zsh ./ci_setup.sh
 
+      # Initialize OrbStack if installed
+      if command -v orbctl > /dev/null 2>&1; then
+        echo "Initializing OrbStack..."
+        orbctl start || {
+          echo "Failed to start OrbStack"
+          exit 1
+        }
+        # Wait for OrbStack to be ready
+        sleep 5
+        # Verify OrbStack is running
+        orbctl status || {
+          echo "OrbStack failed to start properly"
+          exit 1
+        }
+      fi
+
       # Show installed package versions
       echo "=== Installed Versions ==="
       command -v brew && brew --version
