--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -184,8 +184,8 @@ env:
       echo "Running verification script..."
       # Source zshrc to ensure all configurations are loaded
       source ~/.zshrc || { echo "Failed to source ~/.zshrc"; exit 1; }
-      # Create a log file for verification
-      ./verify_setup.sh 2>&1 | tee verify.log
+      # Run verification in local mode (not quiet mode)
+      QUIET_MODE=false ./verify_setup.sh 2>&1 | tee verify.log
       # Exit with the status of verify_setup.sh
       exit ${PIPESTATUS[0]}
     '
