--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -36,6 +36,8 @@ env:
       - |
         # Only populate the cache, don't run verification
         echo "Homebrew cache will be populated on first run"
+        # Fix permissions for Homebrew directory
+        sudo chown -R $(whoami) /opt/homebrew || true
         # Ensure Homebrew is installed
         if ! command -v brew &>/dev/null; then
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
