--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -15,7 +15,7 @@ env:
   # For antidote plugin manager
   ANTIDOTE_HOME: $HOME/.antidote
 
-# Reusable template for macOS instance configuration
+# Template for macOS instance configuration
 .macos_instance_template: &macos_instance_template
   macos_instance:
     image: ghcr.io/cirruslabs/macos-sonoma-base:latest
@@ -24,25 +24,6 @@ env:
 
   # Set a timeout for the entire task (3 hours)
   timeout_in: 180m
-
-# Template for Homebrew caching
-.brew_cache_template: &brew_cache_template
-  brew_cache:
-    folder: /opt/homebrew
-    fingerprint_script:
-      - echo $CIRRUS_OS
-      - cat Brewfile || echo "No Brewfile"
-    populate_script:
-      - |
-        # Only populate the cache, don't run verification
-        echo "Homebrew cache will be populated on first run"
-        # Fix permissions for Homebrew directory
-        sudo chown -R $(whoami) /opt/homebrew || true
-        # Ensure Homebrew is installed
-        if ! command -v brew &>/dev/null; then
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          [[ "$(uname -m)" == "arm64" ]] && eval "$(/opt/homebrew/bin/brew shellenv)"
-        fi
 
 # Template for repository cloning
 .clone_template: &clone_template
@@ -219,7 +200,7 @@ daily_validation_task:
   cron: "0 0 * * *"  # Run at midnight UTC every day
 
   # Include all configurations using templates
-  <<: [*macos_instance_template, *brew_cache_template, *clone_template,
+  <<: [*macos_instance_template, *clone_template,
        *prepare_template, *create_test_template, *setup_template,
        *verify_template, *artifacts_template]
 
@@ -258,6 +239,6 @@ macos_arm_test_task:
   name: macos_arm_test
 
   # Include common configurations using templates
-  <<: [*macos_instance_template, *brew_cache_template, *clone_template,
+  <<: [*macos_instance_template, *clone_template,
        *shellcheck_template, *prepare_template, *create_test_template,
        *setup_template, *verify_template, *artifacts_template]
