--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -69,6 +69,15 @@ env:
 .prepare_template: &prepare_template
   prepare_script:
     - |
+      # Install Homebrew if needed
+      if ! command -v brew &>/dev/null; then
+        /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+        [[ "$(uname -m)" == "arm64" ]] && eval "$(/opt/homebrew/bin/brew shellenv)"
+      fi
+
+      # Install ShellCheck
+      brew install shellcheck
+
       # Ensure script is executable
       chmod +x ci_modifiers.sh
 
