--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -179,12 +179,21 @@ env:
     # Switch to zsh for the entire verification process
     zsh -c '
       set -e
+      # Initialize completion system
+      autoload -Uz compinit
+      compinit
+      # Set up completion directories
+      mkdir -p ${HOME}/.zsh/completions
+      fpath=(${HOME}/.zsh/completions $fpath)
       # Ensure the shell is properly loaded
       echo "Running verification script..."
       # Source zshrc to ensure all configurations are loaded
       source ~/.zshrc || { echo "Failed to source ~/.zshrc"; exit 1; }
-      # Run verification in local mode (not quiet mode)
-      QUIET_MODE=false ./verify_setup.sh 2>&1 | tee verify.log
+      # Force local output mode and disable GitHub Actions output
+      export QUIET_MODE=false
+      export GITHUB_ACTIONS=false
+      # Run verification in local mode
+      ./verify_setup.sh 2>&1 | tee verify.log
       # Exit with the status of verify_setup.sh
       exit ${PIPESTATUS[0]}
     '
