--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -149,8 +149,33 @@ env:
 
       # Run the setup script with CI-specific environment
       export CI=true
-      export SKIP_ORBSTACK=true
       zsh ./ci_setup.sh
+
+      # Initialize OrbStack for CI
+      if command -v orbctl >/dev/null 2>&1; then
+        echo "Initializing OrbStack..."
+        # Add OrbStack to PATH
+        export PATH="/Applications/OrbStack.app/Contents/MacOS:$PATH"
+
+        # Start OrbStack with retries
+        for i in {1..5}; do
+          echo "Attempt $i to start OrbStack..."
+          if orbctl start; then
+            echo "OrbStack started successfully"
+            break
+          fi
+          sleep 5
+        done
+
+        # Wait for OrbStack to be ready
+        for i in {1..30}; do
+          if orbctl status >/dev/null 2>&1; then
+            echo "OrbStack is ready"
+            break
+          fi
+          sleep 1
+        done
+      fi
 
       # Show installed package versions
       echo "=== Installed Versions ==="
@@ -162,6 +187,7 @@ env:
       command -v pyenv && pyenv --version
       command -v terraform && terraform --version
       command -v starship && starship --version
+      command -v orbctl && orbctl version
 
 # Template for verification
 .verify_template: &verify_template
@@ -182,6 +208,8 @@ env:
       # Force local output mode and disable GitHub Actions output
       export QUIET_MODE=false
       export GITHUB_ACTIONS=false
+      # Ensure OrbStack is in PATH
+      export PATH="/Applications/OrbStack.app/Contents/MacOS:$PATH"
       # Run verification in local mode
       ./verify_setup.sh 2>&1 | tee verify.log
       # Exit with the status of verify_setup.sh
