--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -176,23 +176,40 @@ env:
     # Switch to zsh for the entire verification process
     zsh -c '
       set -e
+
+      # Set up completion directories first
+      mkdir -p ${HOME}/.zsh/completions
+      mkdir -p ${HOME}/.zcompcache
+
       # Initialize completion system
       autoload -Uz compinit
-      compinit
-      # Set up completion directories
-      mkdir -p ${HOME}/.zsh/completions
+      compinit -d ${HOME}/.zcompcache/zcompdump
+
+      # Add completions directory to fpath
       fpath=(${HOME}/.zsh/completions $fpath)
+
+      # Initialize Antidote early
+      if [[ -e "$(brew --prefix)/opt/antidote/share/antidote/antidote.zsh" ]]; then
+        source "$(brew --prefix)/opt/antidote/share/antidote/antidote.zsh"
+        antidote load "${ZDOTDIR:-$HOME}/.zsh_plugins.txt"
+      fi
+
       # Ensure the shell is properly loaded
       echo "Running verification script..."
+
       # Source zshrc to ensure all configurations are loaded
       source ~/.zshrc || { echo "Failed to source ~/.zshrc"; exit 1; }
+
       # Force local output mode and disable GitHub Actions output
       export QUIET_MODE=false
       export GITHUB_ACTIONS=false
+
       # Skip OrbStack verification in CI
       export SKIP_ORBSTACK=true
+
       # Run verification in local mode
       ./verify_setup.sh 2>&1 | tee verify.log
+
       # Exit with the status of verify_setup.sh
       exit ${PIPESTATUS[0]}
     '
