fix: ensure proper path handling for tee command in CI

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -213,11 +213,14 @@ env:
       # Source zshrc to ensure all configurations are loaded
       source "${ZDOTDIR}/.zshrc" || { echo "Failed to source ${ZDOTDIR}/.zshrc"; exit 1; }
 
-      # Run verification in local mode
-      ./verify_setup.sh 2>&1 | tee verify.log
+      # Run verification in local mode and capture output
+      {
+        ./verify_setup.sh
+        exit_status=$?
+      } 2>&1 | tee "${PWD}/verify.log"
 
       # Exit with the status of verify_setup.sh
-      exit ${PIPESTATUS[0]}
+      exit $exit_status
     '
 
 # Template for artifact collection
