--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,18 @@ commands:
           name: Install Homebrew
           command: |
             if ! command -v brew &>/dev/null; then
-              /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-              [[ "$(uname -m)" == "arm64" ]] && eval "$(/opt/homebrew/bin/brew shellenv)"
+                /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+                [[ "$(uname -m)" == "arm64" ]] && eval "$(/opt/homebrew/bin/brew shellenv)"
             fi
+
+  ensure_homebrew_bundle:
+    description: "Ensure homebrew-bundle is installed"
+    steps:
+      - run:
+          name: Install homebrew-bundle if needed
+          command: |
+            chmod +x .circleci/install_bundle.sh
+            ./.circleci/install_bundle.sh
 
   prepare_environment:
     description: "Prepare the CI environment"
@@ -32,17 +41,17 @@ commands:
           name: Create plugins file
           command: |
             if [[ ! -f ~/.zsh_plugins.txt ]]; then
-              mkdir -p ~/.antidote
-              echo "# Core functionality" > ~/.zsh_plugins.txt
-              echo "zsh-users/zsh-completions" >> ~/.zsh_plugins.txt
-              echo "zsh-users/zsh-autosuggestions" >> ~/.zsh_plugins.txt
-              echo "zsh-users/zsh-syntax-highlighting" >> ~/.zsh_plugins.txt
-              echo "" >> ~/.zsh_plugins.txt
-              echo "# Git integration" >> ~/.zsh_plugins.txt
-              echo "ohmyzsh/ohmyzsh path:plugins/git" >> ~/.zsh_plugins.txt
-              echo "" >> ~/.zsh_plugins.txt
-              echo "# Kubernetes tools" >> ~/.zsh_plugins.txt
-              echo "ohmyzsh/ohmyzsh path:plugins/kubectl" >> ~/.zsh_plugins.txt
+                mkdir -p ~/.antidote
+                echo "# Core functionality" > ~/.zsh_plugins.txt
+                echo "zsh-users/zsh-completions" >> ~/.zsh_plugins.txt
+                echo "zsh-users/zsh-autosuggestions" >> ~/.zsh_plugins.txt
+                echo "zsh-users/zsh-syntax-highlighting" >> ~/.zsh_plugins.txt
+                echo "" >> ~/.zsh_plugins.txt
+                echo "# Git integration" >> ~/.zsh_plugins.txt
+                echo "ohmyzsh/ohmyzsh path:plugins/git" >> ~/.zsh_plugins.txt
+                echo "" >> ~/.zsh_plugins.txt
+                echo "# Kubernetes tools" >> ~/.zsh_plugins.txt
+                echo "ohmyzsh/ohmyzsh path:plugins/kubectl" >> ~/.zsh_plugins.txt
             fi
 
   run_setup:
@@ -76,8 +85,8 @@ commands:
             compinit -d "${ZCOMPDUMP}"
             fpath=("${COMPLETION_DIR}" $fpath)
             if [[ -e "$(brew --prefix)/opt/antidote/share/antidote/antidote.zsh" ]]; then
-              source "$(brew --prefix)/opt/antidote/share/antidote/antidote.zsh"
-              antidote load "${ZDOTDIR}/.zsh_plugins.txt"
+                source "$(brew --prefix)/opt/antidote/share/antidote/antidote.zsh"
+                antidote load "${ZDOTDIR}/.zsh_plugins.txt"
             fi
             source "${ZDOTDIR}/.zshrc" || { echo "Failed to source ${ZDOTDIR}/.zshrc"; exit 1; }
             # Redirect output to both console and log file in CI
@@ -107,6 +116,7 @@ jobs:
     steps:
       - checkout
       - install_homebrew
+      - ensure_homebrew_bundle
       - prepare_environment
       - create_plugins_file
       - run_setup
