Fix verification phase by ensuring zsh context for autoload and zsh-specific commands

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,9 @@ commands:
     steps:
       - run:
           name: Run verification script
+          shell: /bin/zsh
           command: |
+            # Set up environment variables in zsh context
             export COMPLETION_DIR="${HOME}/.zsh/completions"
             export ZCOMPCACHE="${HOME}/.zcompcache"
             export ZCOMPDUMP="${ZCOMPCACHE}/zcompdump"
@@ -104,17 +106,25 @@ commands:
             ls -la "${ZDOTDIR}/.zsh_plugins.txt" || echo "Plugins file missing before verification!"
             cat "${ZDOTDIR}/.zsh_plugins.txt" || echo "Cannot read plugins file!"
             
+            # Create necessary directories
             mkdir -p "${COMPLETION_DIR}"
             mkdir -p "${ZCOMPCACHE}"
+            
+            # Initialize zsh completion system (zsh-specific commands)
             autoload -Uz compinit
             compinit -d "${ZCOMPDUMP}"
             fpath=("${COMPLETION_DIR}" $fpath)
+            
+            # Load antidote if available
             if [[ -e "$(brew --prefix)/opt/antidote/share/antidote/antidote.zsh" ]]; then
                 source "$(brew --prefix)/opt/antidote/share/antidote/antidote.zsh"
                 antidote load "${ZDOTDIR}/.zsh_plugins.txt"
             fi
+            
+            # Source zshrc
             source "${ZDOTDIR}/.zshrc" || { echo "Failed to source ${ZDOTDIR}/.zshrc"; exit 1; }
-            # Redirect output to both console and log file in CI
+            
+            # Run verification script with output redirection
             ./verify_setup.sh 2>&1 | tee verify.log
 
 # Define the main workflow
