Simplify verification by removing tee complexity
Even simpler approach - remove the tee command entirely and let the verification script handle its own output and exit code directly.

Changes:
- Remove `| tee verify.log` and `${PIPESTATUS[0]}` complexity
- Simply run `./verify_setup.sh` directly 
- Let the verification script's exit code propagate naturally
- Remove verify.log artifact since we're not capturing it anymore

This is the most straightforward fix - when verification fails, CI fails. When verification passes, CI passes. No intermediate processing needed.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,12 +128,8 @@ commands:
             # Source zshrc - don't fail if this doesn't work in CI
             source "${ZDOTDIR}/.zshrc" || echo "Warning: Failed to source ${ZDOTDIR}/.zshrc (this may be expected in CI)"
             
-            # Run verification script and capture exit code properly
-            ./verify_setup.sh 2>&1 | tee verify.log
-            verification_exit_code=${PIPESTATUS[0]}
-            
-            echo "Verification script exited with code: $verification_exit_code"
-            exit $verification_exit_code
+            # Run verification script directly - let it handle its own output and exit code
+            ./verify_setup.sh
 
 # Define the main workflow
 workflows:
@@ -169,9 +165,6 @@ jobs:
       - store_artifacts:
           path: ~/.zsh_plugins.txt
           destination: zsh_plugins
-      - store_artifacts:
-          path: verify.log
-          destination: verify_log
       - store_artifacts:
           path: /tmp/circleci-build.log
           destination: build_log
