Fix shell consistency - use zsh approach instead of BASH_ENV
You're absolutely right - we were using `shell: /bin/zsh` but then using `$BASH_ENV` which is Bash-specific. This was inconsistent and potentially problematic.

Changes:
- Remove `$BASH_ENV` usage entirely
- Use `eval "$(brew shellenv)"` in each step instead (the proper way for any shell)
- Keep everything consistent with zsh
- Simplify the approach - each step sets up its own Homebrew environment

This is cleaner and more consistent with our shell choice.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,14 +19,10 @@ commands:
                 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
             fi
             
-            # Ensure Homebrew is in PATH for subsequent steps
+            # Set up Homebrew environment for the current session
             if [[ "$(uname -m)" == "arm64" ]]; then
-                echo 'export PATH="/opt/homebrew/bin:$PATH"' >> $BASH_ENV
-                export PATH="/opt/homebrew/bin:$PATH"
                 eval "$(/opt/homebrew/bin/brew shellenv)"
             else
-                echo 'export PATH="/usr/local/bin:$PATH"' >> $BASH_ENV  
-                export PATH="/usr/local/bin:$PATH"
                 eval "$(/usr/local/bin/brew shellenv)"
             fi
             
@@ -42,8 +38,12 @@ commands:
           name: Install homebrew-bundle if needed
           shell: /bin/zsh
           command: |
-            # Source the environment to get brew in PATH
-            source $BASH_ENV
+            # Set up Homebrew environment
+            if [[ "$(uname -m)" == "arm64" ]]; then
+                eval "$(/opt/homebrew/bin/brew shellenv)"
+            else
+                eval "$(/usr/local/bin/brew shellenv)"
+            fi
             
             chmod +x .circleci/install_bundle.sh
             ./.circleci/install_bundle.sh
@@ -55,8 +55,12 @@ commands:
           name: Install required tools and setup environment
           shell: /bin/zsh
           command: |
-            # Source the environment to get brew in PATH
-            source $BASH_ENV
+            # Set up Homebrew environment
+            if [[ "$(uname -m)" == "arm64" ]]; then
+                eval "$(/opt/homebrew/bin/brew shellenv)"
+            else
+                eval "$(/usr/local/bin/brew shellenv)"
+            fi
             
             # Install required tools
             brew install shellcheck
@@ -104,8 +108,12 @@ commands:
           name: Run setup script
           shell: /bin/zsh
           command: |
-            # Source the environment to get brew in PATH
-            source $BASH_ENV
+            # Set up Homebrew environment
+            if [[ "$(uname -m)" == "arm64" ]]; then
+                eval "$(/opt/homebrew/bin/brew shellenv)"
+            else
+                eval "$(/usr/local/bin/brew shellenv)"
+            fi
             
             export COMPLETION_DIR="${HOME}/.zsh/completions"
             export ZCOMPCACHE="${HOME}/.zcompcache"
@@ -128,8 +136,12 @@ commands:
           name: Run verification script
           shell: /bin/zsh
           command: |
-            # Source the environment to get brew in PATH
-            source $BASH_ENV
+            # Set up Homebrew environment
+            if [[ "$(uname -m)" == "arm64" ]]; then
+                eval "$(/opt/homebrew/bin/brew shellenv)"
+            else
+                eval "$(/usr/local/bin/brew shellenv)"
+            fi
             
             # Set up environment variables in zsh context
             export COMPLETION_DIR="${HOME}/.zsh/completions"
