Remove unnecessary architecture awareness - let brew handle it
You're absolutely right - we don't need manual architecture detection. Homebrew's `brew shellenv` command is already architecture-aware and outputs the correct paths automatically:

- On Apple Silicon: outputs `/opt/homebrew/bin` paths  
- On Intel: outputs `/usr/local/bin` paths

Changes:
- Remove manual `uname -m` architecture detection
- Simplify to just `eval "$(brew shellenv)"` everywhere
- Let Homebrew handle the architecture logic
- Much cleaner and less error-prone

This follows the DRY principle - don't repeat logic that Homebrew already handles correctly.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,12 +19,8 @@ commands:
                 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
             fi
             
-            # Set up Homebrew environment for the current session
-            if [[ "$(uname -m)" == "arm64" ]]; then
-                eval "$(/opt/homebrew/bin/brew shellenv)"
-            else
-                eval "$(/usr/local/bin/brew shellenv)"
-            fi
+            # Set up Homebrew environment - let brew figure out the architecture
+            eval "$(brew shellenv)"
             
             # Verify brew is working
             echo "Verifying Homebrew installation..."
@@ -39,11 +35,7 @@ commands:
           shell: /bin/zsh
           command: |
             # Set up Homebrew environment
-            if [[ "$(uname -m)" == "arm64" ]]; then
-                eval "$(/opt/homebrew/bin/brew shellenv)"
-            else
-                eval "$(/usr/local/bin/brew shellenv)"
-            fi
+            eval "$(brew shellenv)"
             
             chmod +x .circleci/install_bundle.sh
             ./.circleci/install_bundle.sh
@@ -56,11 +48,7 @@ commands:
           shell: /bin/zsh
           command: |
             # Set up Homebrew environment
-            if [[ "$(uname -m)" == "arm64" ]]; then
-                eval "$(/opt/homebrew/bin/brew shellenv)"
-            else
-                eval "$(/usr/local/bin/brew shellenv)"
-            fi
+            eval "$(brew shellenv)"
             
             # Install required tools
             brew install shellcheck
@@ -109,11 +97,7 @@ commands:
           shell: /bin/zsh
           command: |
             # Set up Homebrew environment
-            if [[ "$(uname -m)" == "arm64" ]]; then
-                eval "$(/opt/homebrew/bin/brew shellenv)"
-            else
-                eval "$(/usr/local/bin/brew shellenv)"
-            fi
+            eval "$(brew shellenv)"
             
             export COMPLETION_DIR="${HOME}/.zsh/completions"
             export ZCOMPCACHE="${HOME}/.zcompcache"
@@ -137,11 +121,7 @@ commands:
           shell: /bin/zsh
           command: |
             # Set up Homebrew environment
-            if [[ "$(uname -m)" == "arm64" ]]; then
-                eval "$(/opt/homebrew/bin/brew shellenv)"
-            else
-                eval "$(/usr/local/bin/brew shellenv)"
-            fi
+            eval "$(brew shellenv)"
             
             # Set up environment variables in zsh context
             export COMPLETION_DIR="${HOME}/.zsh/completions"
