Fix brew shellenv chicken-and-egg problem
Issue: After Homebrew installation, we were calling `eval "$(brew shellenv)"` but `brew` wasn't in PATH yet, causing "command not found" errors.

Solution: Use full path to brew executable for initial shellenv setup:
- Check for `/opt/homebrew/bin/brew` (Apple Silicon)
- Check for `/usr/local/bin/brew` (Intel)
- Use the found path to run shellenv and set up environment

This resolves the circular dependency where we need brew in PATH to run brew shellenv, but need to run brew shellenv to get brew in PATH.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,15 @@ commands:
                 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
             fi
             
-            # Set up Homebrew environment - let brew figure out the architecture
-            eval "$(brew shellenv)"
+            # Set up Homebrew environment using full path initially
+            if [[ -x "/opt/homebrew/bin/brew" ]]; then
+                eval "$(/opt/homebrew/bin/brew shellenv)"
+            elif [[ -x "/usr/local/bin/brew" ]]; then
+                eval "$(/usr/local/bin/brew shellenv)"
+            else
+                echo "Error: Could not find brew executable"
+                exit 1
+            fi
             
             # Verify brew is working
             echo "Verifying Homebrew installation..."
@@ -34,8 +41,12 @@ commands:
           name: Install homebrew-bundle if needed
           shell: /bin/zsh
           command: |
-            # Set up Homebrew environment
-            eval "$(brew shellenv)"
+            # Set up Homebrew environment using full path initially
+            if [[ -x "/opt/homebrew/bin/brew" ]]; then
+                eval "$(/opt/homebrew/bin/brew shellenv)"
+            elif [[ -x "/usr/local/bin/brew" ]]; then
+                eval "$(/usr/local/bin/brew shellenv)"
+            fi
             
             # Function to check if brew bundle works
             check_bundle() {
@@ -97,7 +108,11 @@ commands:
           shell: /bin/zsh
           command: |
             # Set up Homebrew environment
-            eval "$(brew shellenv)"
+            if [[ -x "/opt/homebrew/bin/brew" ]]; then
+                eval "$(/opt/homebrew/bin/brew shellenv)"
+            elif [[ -x "/usr/local/bin/brew" ]]; then
+                eval "$(/usr/local/bin/brew shellenv)"
+            fi
             
             # Install required tools
             brew install shellcheck
@@ -146,7 +161,11 @@ commands:
           shell: /bin/zsh
           command: |
             # Set up Homebrew environment
-            eval "$(brew shellenv)"
+            if [[ -x "/opt/homebrew/bin/brew" ]]; then
+                eval "$(/opt/homebrew/bin/brew shellenv)"
+            elif [[ -x "/usr/local/bin/brew" ]]; then
+                eval "$(/usr/local/bin/brew shellenv)"
+            fi
             
             export COMPLETION_DIR="${HOME}/.zsh/completions"
             export ZCOMPCACHE="${HOME}/.zcompcache"
@@ -170,7 +189,11 @@ commands:
           shell: /bin/zsh
           command: |
             # Set up Homebrew environment
-            eval "$(brew shellenv)"
+            if [[ -x "/opt/homebrew/bin/brew" ]]; then
+                eval "$(/opt/homebrew/bin/brew shellenv)"
+            elif [[ -x "/usr/local/bin/brew" ]]; then
+                eval "$(/usr/local/bin/brew shellenv)"
+            fi
             
             # Set up environment variables in zsh context
             export COMPLETION_DIR="${HOME}/.zsh/completions"
