Add brew update before setup to fix signature mismatch errors
The direnv installation was failing with signature mismatch errors indicating stale/corrupted Homebrew formulae cache. Adding `brew update` before running the setup script to refresh the formulae and avoid MITM detection false positives.

This is a best practice that ensures we have the latest formula signatures before installing packages with brew bundle.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,6 +160,13 @@ commands:
             
             mkdir -p "${COMPLETION_DIR}"
             mkdir -p "${ZCOMPCACHE}"
+            
+            # Update Homebrew before running setup to avoid signature mismatch errors
+            echo "Updating Homebrew formulae to avoid signature mismatch errors..."
+            brew update || {
+                echo "Warning: brew update failed, but continuing with setup..."
+            }
+            
             zsh ./ci_setup.sh
 
   run_verification:
