--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,19 +10,9 @@ commands:
           shell: /bin/zsh
           command: |
             if ! command -v brew &>/dev/null; then
-                /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-                [[ "$(uname -m)" == "arm64" ]] && eval "$(/opt/homebrew/bin/brew shellenv)"
+              /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+              [[ "$(uname -m)" == "arm64" ]] && eval "$(/opt/homebrew/bin/brew shellenv)"
             fi
-
-  ensure_homebrew_bundle:
-    description: "Ensure homebrew-bundle is installed"
-    steps:
-      - run:
-          name: Install homebrew-bundle if needed
-          shell: /bin/zsh
-          command: |
-            chmod +x .circleci/install_bundle.sh
-            ./.circleci/install_bundle.sh
 
   prepare_environment:
     description: "Prepare the CI environment"
@@ -155,9 +145,11 @@ jobs:
     steps:
       - checkout
       - install_homebrew
-      - ensure_homebrew_bundle
       - prepare_environment
       - run_setup
+      - store_artifacts:
+          path: /tmp/brew_bundle.log
+          destination: brew_bundle_log
       - run_verification
       - store_artifacts:
           path: ~/.zshrc
